trying test w/o success

--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -1,5 +1,5 @@
 <h1>Result</h1>
 
-<%= @answer %>
+<p id="answer"><%= @answer %></p>
 <br>
 <p class="pt-2"><%= link_to "Jouer à nouveau", "new" %></p>
